--- a/Exercises.Rmd
+++ b/Exercises.Rmd
@@ -55,6 +55,12 @@ concerts_obo[[5]]$showInfo[[2]] <- concerts_obo[[5]]$showInfo[[1]]
 concerts_obo[[5]]$showInfo[[2]][c(1, 8)] <- list(time="2021/12/20 10:00:00", endTime="2021/12/21 22:00:00")
 ```
 
+Exercise 3.6 Due to Covid-19 concerts 2, 5, 7 are cancelled. Remove those three concerts from concerts_obo.
+
+```{r}
+concerts_obo <- concerts_obo[-c(2, 5, 7)]
+```
+
 
 
 
